# quantgemma

./: .gitignore  CLAUDE.md  mlflow.db  pyproject.toml
docs/: tokens.md
docs/notes/: 2026-04-01-10m-bars-continued.md  2026-04-02-10m-128bars.md  2026-04-02-10m-bars-low-lr.md
scripts/: prepare.py  test.py  train.py
